# OpenBK7231T_App

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .project  .releaserc.yaml  BUILDING.md  Dockerfile.obk-build  FLASHING.md  Makefile  OPENBK_ACK_VERIFICATION.md  README.md  TASMOTA_DGR_ACK_BEHAVIOR.md  bouffalo.mk  build_bk7231t.bat  build_bk7231t_inner.sh  build_error.txt  build_esp32.bat  build_output.txt  commands.md  components.mk  custom.mk  gulpfile.js  lastEnumTemplate.txt  lastHTTPPacket.txt  lastMQTTPublishSentByOBK.txt  myHTTP2022-2010.sln  myHTTP2022-2010.vcproj  myHTTP2022-2010.vcxproj  myHTTP2022.sln  myHTTP2022.vcproj  nfd.lib  nfd_d.lib  obk_ln882h_build.bat  obk_rtl8710b_build.bat  openBeken_win32_mvsc2017.vcxproj  openBeken_win32_mvsc2017.vcxproj.filters  package-lock.json  package.json  recents.json  (+12 more)
libraries/ESP32_Display_Panel/: .build-rules.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README_CN.md  esp_panel_board_supported_conf.h
libraries/ESP32_Display_Panel/.github/workflows/: arduino_lint.yml
libraries/ESP32_Display_Panel/.gitlab/ci/: build.yml
libraries/ESP32_Display_Panel/docs/: faq_others_cn.md
libraries/ESP32_Display_Panel/docs/board/: board_elecrow.md  board_m5stack.md
libraries/ESP32_Display_Panel/examples/esp_idf/lvgl_v8_port/: sdkconfig.ci.BOARD_ESPRESSIF_ESP32_S3_BOX_3  sdkconfig.test.rotation_270
libraries/ESP32_Display_Panel/mpy_support/: esp_panel_mp_board.cpp
libraries/ESP32_Display_Panel/src/: esp_display_panel.hpp
libraries/ESP32_Display_Panel/src/board/: Kconfig.board
libraries/ESP32_Display_Panel/src/board/custom/: Kconfig.board_custom  Kconfig.board_custom.touch  esp_panel_board_config_custom.h  esp_panel_board_kconfig_custom_lcd.h
libraries/ESP32_Display_Panel/src/board/supported/: esp_panel_board_kconfig_supported.h
libraries/ESP32_Display_Panel/src/drivers/: Kconfig.drivers
libraries/ESP32_Display_Panel/src/drivers/backlight/: esp_panel_backlight.hpp  esp_panel_backlight_conf_internal.h  esp_panel_backlight_factory.cpp  esp_panel_backlight_switch_expander.cpp  esp_panel_backlight_switch_gpio.cpp  esp_panel_backlight_switch_gpio.hpp
libraries/ESP32_Display_Panel/src/drivers/bus/: esp_panel_bus.cpp  esp_panel_bus_factory.hpp  esp_panel_bus_i2c.cpp  esp_panel_bus_rgb.hpp
libraries/ESP32_Display_Panel/src/drivers/host/: esp_panel_host_dsi.cpp  esp_panel_host_i2c.cpp  esp_panel_host_spi.cpp  esp_panel_host_spi.hpp
libraries/ESP32_Display_Panel/src/drivers/io_expander/: esp_panel_io_expander_factory.cpp
libraries/ESP32_Display_Panel/src/drivers/lcd/: esp_panel_lcd_axs15231b.hpp  esp_panel_lcd_ek9716b.cpp  esp_panel_lcd_ek9716b.hpp  esp_panel_lcd_factory.cpp  esp_panel_lcd_factory.hpp  esp_panel_lcd_gc9b71.cpp  esp_panel_lcd_gc9b71.hpp  esp_panel_lcd_ili9341.cpp  esp_panel_lcd_ili9341.hpp  esp_panel_lcd_ili9881c.cpp  esp_panel_lcd_ili9881c.hpp  esp_panel_lcd_jd9165.cpp  esp_panel_lcd_jd9365.cpp  esp_panel_lcd_jd9365.hpp  esp_panel_lcd_nv3022b.cpp  esp_panel_lcd_sh8601.cpp  esp_panel_lcd_sh8601.hpp  esp_panel_lcd_spd2010.hpp  esp_panel_lcd_st7701.cpp  esp_panel_lcd_st7701.hpp  esp_panel_lcd_st7789.hpp  esp_panel_lcd_st77903.cpp  esp_panel_lcd_st77903.hpp  esp_panel_lcd_st77916.cpp  esp_panel_lcd_st77922.hpp  esp_panel_lcd_st7796.cpp  esp_panel_lcd_st7796.hpp
libraries/ESP32_Display_Panel/src/drivers/touch/: esp_panel_touch.hpp  esp_panel_touch_cst816s.cpp  esp_panel_touch_cst816s.hpp  esp_panel_touch_ft5x06.cpp  esp_panel_touch_gt911.cpp  esp_panel_touch_spd2010.cpp  esp_panel_touch_st1633.cpp  esp_panel_touch_stmpe610.hpp  (+3 more)
libraries/ESP32_Display_Panel/src/utils/: esp_panel_utils_vector.hpp
libraries/ESP32_Display_Panel/tools/: check_file_version.py
libraries/ESP32_IO_Expander/: CHANGELOG.md  CMakeLists.txt  micropython.cmake
libraries/ESP32_IO_Expander/.github/workflows/: check_lib_versions.yml
libraries/ESP32_IO_Expander/src/: esp_io_expander.hpp
libraries/ESP32_IO_Expander/src/chip/: esp_expander_base.cpp  esp_expander_ht8574.cpp  esp_expander_ht8574.hpp  esp_expander_tca95xx_16bit.hpp
libraries/ESP32_IO_Expander/src/port/: esp_io_expander_ht8574.h  esp_io_expander_tca95xx_16bit.c
libraries/ESP32_IO_Expander/test_apps/: CMakeLists.txt  sdkconfig.ci.debug_log
(+1828 files in other folders)
